# PHIMATS

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Doxyfile  INSTALL.md  LICENSE  Notes.md  README.md  ToDo.md  WSL_QuickStart.md  configure_env.sh  environment.yml  makefile
.github/workflows/: main.yml
CaseStudies/: MakeFile.defs
src/: CMakeLists.txt  H5IO.cxx  Logger.cxx  MakeFile.defs  Nodes.cxx  makefile
src/FEM_utils/: BoundaryConditions.py  MeshManager.py  PostProcessing.py  PreProcessing.py  postprocessing.py  preprocessing.py
src/FiniteElements/: Hex8.cxx  Quad4.cxx  Quad8.cxx  Tri3.cxx  Tri6.cxx  makefile
src/FiniteElements/Mechanics/: BaseElemMech.cxx  Hex8.cxx  Quad4.cxx  Quad4Axi.cxx  Tri3.cxx  makefile
src/FiniteElements/PFF/: BaseElemPFF.cxx  Quad4PFF.cxx  Quad4PFFAxi.cxx  makefile
src/FiniteElements/Transport/: BaseElemTrans.cxx  BaseElemTransport.cxx  Quad4T.cxx  Tri3T.cxx  makefile
src/FiniteElements/Trapping/: BaseElemTrap.cxx  Quad4TH.cxx  Quad4THAxi.cxx  Quad4THS.cxx  Tri3TH.cxx  Tri6TH.cxx  makefile
src/Materials/: PlaneStrain.cxx  makefile
src/Materials/Mechanics/: Elastic.cxx  Elastic3D.cxx  IsoHard.cxx  LinearElastic.cxx  PlaneStrain.cxx  PlaneStress.cxx  makefile
src/Materials/PFF/: ChemoMech.cxx  PFF.cxx
src/Materials/Transport/: HeatMassTransport.cxx  PhaseTrap.cxx2  makefile
src/Materials/Trapping/: MechTrap.cxx  PhaseTrap.cxx  TrapGB.cxx  TrapHLGB.cxx  TrapPhase.cxx
src/Models/: MechModel.cxx  MechTrapModel.cxx  PFFModel.cxx  TransportModel.cxx  TrappingModel.cxx  makefile
src/Solvers/: LinearElastic.cxx  LinearMech.cxx  LinearSolver.cxx  LinearTransport.cxx  makefile
src/include/: H5IO.h  Logger.h  Matrix.h  Nodes.h  Version.h
src/include/FiniteElements/: BaseElements.h  Elements.h  Hex8.h  Quad4.h  Quad8.h  Tri3.h  Tri6.h
src/include/FiniteElements/Mechanics/: BaseElemMech.h  Hex8.h  Quad4.h  Quad4Axi.h  Tri3.h
src/include/FiniteElements/PFF/: BaseElemPFF.h  Quad4PFF.h  Quad4PFFAxi.h
src/include/FiniteElements/Transport/: BaseElemTrans.h  BaseElemTransport.h  Quad4T.h  Tri3T.h
src/include/FiniteElements/Trapping/: BaseElemTrap.h  Quad4TH.h  Quad4THAxi.h  Quad4THS.h  Tri3TH.h  Tri6TH.h
src/include/Materials/: BaseMaterial.h  PlaneStrain.h
src/include/Materials/Mechanics/: BaseMechanics.h  Elastic.h  Elastic3D.h  IsoHard.h  IsoHard.tpp  LinearElastic.h  PlaneStrain.h  PlaneStress.h
src/include/Materials/PFF/: BasePFF.h  ChemoMech.h  PFF.h
src/include/Materials/Transport/: BaseTransport.h  HeatMassTransport.h
src/include/Materials/Trapping/: BaseTrapping.h  MechTrap.h  PhaseTrap.h  TrapGB.h  TrapHLGB.h  TrapPhase.h
src/include/Models/: BaseModel.h  MechModel.h  MechTrapModel.h  PFFModel.h  TransportModel.h  TrappingModel.h
src/include/Solvers/: BaseSolver.h  LinearElastic.h  LinearMech.h  LinearSolver.h  LinearTransport.h
(+78 files in other folders)
